syntax = "proto3";
package store_worker;

option java_multiple_files = true;
option java_package = "com.github.conanchen.gedit.store.worker.grpc";
option java_outer_classname = "StoreWorkerProto";
option objc_class_prefix = "STWRK";

import "common.proto";

// The store service definition.
service StoreWorkerApi {
    rpc Add (AddRequest) returns (WorkshipResponse) {
    }

    rpc ListByStore (ListByStoreRequest) returns (stream WorkshipResponse) {
    }

    rpc ListByWorker (ListByWorkerRequest) returns (stream WorkshipResponse) {
    }

    rpc Ban (BanRequest) returns (WorkshipResponse) {
    }
}

message AddRequest {
    string storeId = 1;
    string workerId = 3;
}

message ListByStoreRequest {
    string storeId = 1;
    int32 from = 100;
    int32 size = 101;
}


message ListByWorkerRequest {
    string workerId = 3;
    int32 from = 100;
    int32 size = 101;
}

message WorkshipResponse {
    common.Status status = 999;
    string workerId = 1;
    string storeId = 5;
    bool active = 7;
    int64 created = 9;
    int64 lastUpdated = 10;

    int32 from = 100;
}


message BanRequest {
    string workerId = 1;
    string storeId = 5;
    bool active = 7;
}
