syntax = "proto3";
package gedit.store;

option java_multiple_files = true;
option java_package = "com.github.conanchen.gedit.store.worker.grpc";
option java_outer_classname = "StoreWorkerProto";
option objc_class_prefix = "GDA";

import "gedit/common.proto";

// The store service definition.
service StoreWorkerApi {
    rpc Add (AddWorkershipRequest) returns (WorkshipResponse) {
    }

    rpc ListByStore (ListWorkshipByStoreRequest) returns (stream WorkshipResponse) {
    }

    rpc ListByWorker (ListWorkshipByWorkerRequest) returns (stream WorkshipResponse) {
        //根据员工uuid查找该员工工作的店铺
    }

    rpc ListMyWorkinStore (ListMyWorkinStoreRequest) returns (stream WorkshipResponse) {
        //should be only used by me
        //查找我工作的店铺
    }

    rpc GetMyCurrentWorkinStore(GetMyCurrentWorkinStoreRequest) returns(WorkshipResponse){
        //收银员app端调用
    }

    rpc Ban (BanWorkshipRequest) returns (WorkshipResponse) {
    }
}

message AddWorkershipRequest {
    string storeUuid = 1;
    string workerUuid = 3;
}

message ListWorkshipByStoreRequest {
    string storeUuid = 1;
    int32 from = 100;
    int32 size = 101;
}


message ListMyWorkinStoreRequest {
    int64 lastUpdated = 1;
}

message GetMyCurrentWorkinStoreRequest{

}

message ListWorkshipByWorkerRequest {
    string workerUuid = 3;
    int32 from = 100;
    int32 size = 101;
}

message WorkshipResponse {
    Status status = 999;

    Workship ownership = 1;

    int32 from = 100;
}


message BanWorkshipRequest {
    string workerUuid = 1;
    string storeUuid = 5;
    bool active = 7;
}

message Workship{
    string uuid = 1;
    string userUuid = 3;
    string storeUuid = 5;

    string userName = 7;
    string userLogo = 9;

    string storeName = 12;
    string storeLogo = 15;
    Location location = 18;

    bool active = 27;
    int64 created = 29;
    int64 lastUpdated = 30;

}
